# taller-tp-worms

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  game_config.yaml  index.md  install_dependencies.sh  tests.sh
client/: client.cpp  client.h  client_sdl2pp_poc.cpp  comando.cpp  comando.h  crear_partida.cpp  crear_partida.h  game.cpp  game.h  lista_espera.cpp  lista_espera.h  lobby_window.cpp  lobby_window.h  login.cpp  login.h  login_window.cpp  login_window.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  pocsdl.cpp  pocsdl.h  snapshot.cpp  snapshot.h  worm.cpp  worm.h
client/comandos/: comando.cpp  comando.h  comando_activar_cheat.cpp  comando_activar_cheat.h  comando_cambiar_angulo.cpp  comando_cambiar_angulo.h  comando_cambiar_arma.cpp  comando_cambiar_arma.h  comando_cambiar_direccion_arma.cpp  comando_cambiar_direccion_arma.h  comando_cargar_arma.cpp  comando_cargar_arma.h  comando_detener_angulo.cpp  comando_detener_angulo.h  comando_detener_movimiento.cpp  comando_detener_movimiento.h  comando_disparar.cpp  comando_disparar.h  comando_mover.cpp  comando_mover.h  comando_saltar.cpp  comando_saltar.h  comando_setear_target.cpp  comando_setear_target.h  comando_setear_timer.cpp  comando_setear_timer.h  factory_comandos.cpp  factory_comandos.h  factory_mensajes.cpp  factory_mensajes.h  mensaje.cpp  mensaje.h
client/comandos/mensajes/: mensaje_accion_jugador.cpp  mensaje_accion_jugador.h  mensaje_cliente.cpp  mensaje_cliente.h  mensaje_handshake.cpp  mensaje_handshake.h  mensaje_handshake_enviar.cpp  mensaje_handshake_enviar.h  mensaje_partida_termino.cpp  mensaje_partida_termino.h  mensaje_snapshot.cpp  mensaje_snapshot.h
client/game/: camara.h  game.cpp  game.h  world.cpp  world.h
client/game/Estados/: worm_state_generator.cpp  worm_state_generator.h
client/game/Proyectiles/: dynamite.cpp  dynamite.h  fragment.cpp  fragment.h  missile.cpp  missile.h  projectile_generator.cpp  projectile_generator.h
client/game/Sonidos/: sound_manager.cpp  sound_manager.h  sounds.yaml
client/game/Texturas/: gestor_texturas.cpp  superficies.yaml  texture_manager.cpp  texture_manager.h
client/game/comunicacion/: beam.cpp  beam.h  explosion.cpp  explosion.h  explosiones.h  projectile.cpp  projectile.h  provision.cpp  provision.h  snapshot.cpp  snapshot.h  worm.cpp  worm.h
client/lobby/: crear_partida.cpp  crear_partida.h  lista_espera.cpp  lista_espera.h  lobby_window.cpp  lobby_window.h  login.cpp  login.h  login_window.cpp  login_window.h  mainwindow.cpp  mainwindow.h  sala_espera.cpp  sala_espera.h
client/lobby/res/: resources.qrc
client/lobby/ui/: crear_partida.ui  lista_espera.ui  lobby_window.ui  sala_espera.ui
client/protocolo/: protocoloCliente.cpp  protocoloCliente.h
client/res/imagenes/: worms_background.png:Zone.Identifier
client/threads/: containerThreads.cpp  containerThreads.h  threadEnviador.cpp  threadEnviador.h  threadRecibidor.cpp  threadRecibidor.h
client/ui/: crear_partida.ui  lista_espera.ui  lobby_window.ui  login_window.ui  mainwindow.ui  menu.ui
common/: armas.h  cheats.h  fondos.h  liberror.cpp  projectile_types.h  protocolo.cpp  protocolo.h  provision_types.h  sound_types.h  worm_states.h
docs/: _config.yml  index.md
editor/: CMakeLists.txt  graphicsscene.cpp  graphicsscene.h  main.cpp  mainwindow.cpp  mainwindow.h
editor/res/: imagenes.qrc
editor/ui/: mainwindow.ui
resources/editor/: imagenes.qrc
server/: Cliente.cpp  Cliente.h  config.h  config_parser.cpp  config_parser.h  explosion_wrapper.h  game_config.h  lobby.cpp  lobby.h  main.cpp  mapContainer.cpp  mapContainer.h  monitorBroadcaster.cpp  monitorBroadcaster.h  monitorClientes.cpp  monitorClientes.h  partida.cpp  partida.h  poc.cpp  poc.h  projectile_wrapper.cpp  projectile_wrapper.h  provisiones_wrapper.h  server.cpp  server.h  server_box2d_poc.cpp  snapshot.cpp  snapshot.h  worm.cpp  worm.h  worm_wrapper.cpp  worm_wrapper.h
server/comandos/: activar_cheat.cpp  activar_cheat.h  cambiar_angulo.cpp  cambiar_angulo.h  cambiar_arma.cpp  cambiar_arma.h  cambiar_direccion_arma.cpp  cambiar_direccion_arma.h  cargar_arma.cpp  cargar_arma.h  comando.cpp  comando.h  comando_crear_partida.cpp  comando_crear_partida.h  comando_detener_movimiento.cpp  comando_detener_movimiento.h  comando_empezar_partida.cpp  comando_empezar_partida.h  comando_listar_partidas.cpp  comando_listar_partidas.h  comando_movimiento.cpp  comando_movimiento.h  detener_angulo.cpp  detener_angulo.h  detener_movimiento.cpp  detener_movimiento.h  disparar.cpp  disparar.h  empezar_partida.cpp  empezar_partida.h  factory_comandos.cpp  factory_comandos.h  mensaje.cpp  mensaje.h  movimiento.cpp  movimiento.h  saltar.cpp  saltar.h  setear_target.cpp  setear_target.h  (+2 more)
server/comandos/mensajes/: factory_mensajes.cpp  factory_mensajes.h  mensaje.cpp  mensaje.h  mensaje_crear_partida.cpp  mensaje_crear_partida.h  mensaje_empezar_partida.cpp  mensaje_empezar_partida.h  mensaje_handshake.cpp  (+15 more)
server/juego/: beam.cpp  beam.h  colisionable.h  collision_categories.h  contact_listener.cpp  contact_listener.h  game_config.h  ground_contact_listener.cpp  ground_contact_listener.h  mapa.cpp  mapa.h  turn_manager.cpp  turn_manager.h  viga.cpp  viga.h  water.cpp  water.h  worm.cpp  worm.h  worm_query.h
server/mapas/: another_map.yaml  asda.yaml  basic.yaml  caida.yaml  casa.yaml  dos_vigas.yaml  eeyjl.yaml  esfera_de_la_muerte.yaml  esfera_de_la_muerte_modificada.yaml  hola.yaml  jaula.yaml  jaula_a_mano.yaml  limite.yaml  mapa1.yaml  mapa1_modificado.yaml  mapa2.yaml  mapa2_modificado.yaml  testingEditor.yaml  testingTurns.yaml  viga_inclinada.yaml  vigasInclinadas.yaml  water.yaml
server/protocolo/: protocoloServer.cpp  protocoloServer.h
server/snapshots/: snapshot.cpp  snapshot.h  snapshot_handshake.cpp  snapshot_handshake.h  snapshot_partida.cpp  snapshot_partida.h
server/threads/: threadAceptador.cpp  threadAceptador.h  threadEnviador.cpp  threadEnviador.h  threadRecibidor.cpp  threadRecibidor.h
tests/: CMakeLists.txt  test.cpp  test_socket.cpp  test_socket.h
(+66 files in other folders)
